--- a/SoTaySinhVien/app/src/main/res/values/styles.xml
+++ b/SoTaySinhVien/app/src/main/res/values/styles.xml
@@ -7,11 +7,24 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="EditPassTheme" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
     <style name="LoginTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="FloatHint" parent="@android:style/TextAppearance">
+        <item name="android:hint">@color/colorPrimaryDark</item>
+        <item name="android:textColor">@color/dark</item>
     </style>
 
 </resources>
