--- a/SoTaySinhVien/app/src/main/res/layout/fragment_home.xml
+++ b/SoTaySinhVien/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical">
 
         <TextView
@@ -20,14 +21,33 @@
             android:background="@color/white"
             android:gravity="center"
             android:text="LỊCH HỌC"
-            android:padding="20dp"
+            android:padding="10dp"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="#000000" />
 
         <LinearLayout
             android:id="@+id/calendar"
+            android:layout_weight="1"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center"
+            android:text="LỊCH CÁ NHÂN"
+            android:padding="10dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#000000" />
+
+        <LinearLayout
+            android:id="@+id/calendarWork"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:orientation="vertical"/>
 
