--- a/SoTaySinhVien/app/src/main/res/menu/drawemenu.xml
+++ b/SoTaySinhVien/app/src/main/res/menu/drawemenu.xml
@@ -13,6 +13,10 @@
         android:title="Điểm Học Phần"
         android:icon="@drawable/ic_baseline_event_note_24"/>
     <item
+        android:id="@+id/editPass"
+        android:title="Đổi Mật Khẩu"
+        android:icon="@drawable/ic_baseline_build_24"/>
+    <item
         android:id="@+id/logout"
         android:title="Đăng xuất"
         android:icon="@drawable/ic_baseline_exit_to_app_24"/>
